--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -1,5 +1,11 @@
 <h1>Submit</h1>
 
+<% if @submitted %>
+<div class="alert alert-success">
+	You have submitted this problem set <%= time_ago_in_words(@page.pset.submit_from(@user).submitted_at) %> ago.
+</div>
+<% end %>
+
 <% if @page.pset.form %>
 <p>When you are ready to submit, make sure you have answered all questions, use the form below to select all required files, enter a note and press the Submit button. If you do not select all required files, you cannot submit.</p>
 <% else %>
