--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -1,10 +1,11 @@
-<h1>Submit</h1>
-
 <% if @submitted %>
-<div class="alert alert-success">
+<div class="alert alert-success" style="margin:-2em; margin-bottom:2em; border:0; border-radius:0;">
 	You have submitted this problem set <%= time_ago_in_words(@page.pset.submit_from(@user).submitted_at) %> ago.
 </div>
 <% end %>
+
+
+<h1>Submit</h1>
 
 <% if @page.pset.form %>
 <p>When you are ready to submit, make sure you have answered all questions, use the form below to select all required files, enter a note and press the Submit button. If you do not select all required files, you cannot submit.</p>
