--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -15,7 +15,7 @@
 				<section class="tab-pane markdown" id="group<%= i %>">
 					<table class="table table-bordered">
 						<tr>
-							<th>Name</th><th>Email</th><th>Last login</th>
+							<th>Name</th><th>Email</th>
 							<% @psets.each do |pset| %>
 							<th><%= pset.name %></th>
 							<% end %>
@@ -24,7 +24,6 @@
 						<tr>
 							<td><%= user.name %></td>
 							<td><%= user.mail %></td>
-							<td><%= time_ago_in_words(user.updated_at) %> ago</td>
 							<% @psets.each do |pset| %>
 							<td><%= 'yes' if user.submit(pset) %></td>
 							<% end %>
@@ -36,7 +35,7 @@
 				<section class="tab-pane markdown active" id="other">
 					<table class="table table-bordered">
 						<tr>
-							<th>Name</th><th>Email</th><th>Last login</th>
+							<th>Name</th><th>Email</th>
 							<% @psets.each do |pset| %>
 							<th><%= pset.name %></th>
 							<% end %>
@@ -45,7 +44,6 @@
 						<tr>
 							<td><%= user.name %></td>
 							<td><%= user.mail %></td>
-							<td><%= time_ago_in_words(user.updated_at) %> ago</td>
 							<% @psets.each do |pset| %>
 							<td><%= 'yes' if user.submit(pset) %></td>
 							<% end %>
