--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -26,7 +26,7 @@
 							<td><%= user.mail %></td>
 							<td><%= user.uvanetid %></td>
 							<% @psets.each do |pset| %>
-							<td><%= 'yes' if user.submit(pset) %></td>
+							<td><%= '<i class="icon-thumbs-up"></i>'.html_safe if user.submit(pset) %></td>
 							<% end %>
 						</tr>
 						<% end %>
@@ -47,7 +47,7 @@
 							<td><%= user.mail %></td>
 							<td><%= user.uvanetid %></td>
 							<% @psets.each do |pset| %>
-							<td><%= 'yes' if user.submit(pset) %></td>
+							<td><%= '<i class="icon-thumbs-up"></i>'.html_safe if user.submit(pset) %></td>
 							<% end %>
 						</tr>
 						<% end %>
