fix kramdown math mode, everything has to be within 6604 now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 		MathJax.Hub.Config({
 			showProcessingMessages: false,
 			asciimath2jax: {
-				delimiters: [['~','~'],['$','$']]
+				//delimiters: [['~','~'],['$','$']]
 			}
 		});
 	</script>
