--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -192,7 +192,7 @@ section dd
 }
 
 /* only top-level lists get this wide a margin */
-section > ul, section > ol
+section > ul, section > ol, section > dl
 {
 	margin:1em 3em;
 }
