whoa not so much

--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -159,6 +159,7 @@ section
 
 section h1, section h2, section h3
 {
+	font-family:"Helvetica Neue", helvetica;
 	margin-bottom:1em;
 	margin-top:20px;
 	line-height:1em;
