--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -100,6 +100,13 @@ section
 	font-size:16px;
 }
 
+section .banner
+{
+	margin:-3em -4em 2em -4em;
+	max-width:none;
+	width:766px;
+}
+
 section h1, section h2, section h3
 {
 	font-family:"Helvetica Neue", helvetica;
