boldify the submit message

--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 
 <% if @page.pset.message %>
-<p><%= @page.pset.message %></p>
+<p><strong><%= @page.pset.message %></strong></p>
 <% end %>
 
 <% if @page.pset.form || @page.pset.pset_files.length > 0 %>
