--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
 			<li class="dropdown"><a href="/"><i class="icon-home icon-white"></i></a></li>
 		</ul>
 
-		<a class="brand"><%= Course.course['short'] %></a>
+		<a href="/" class="brand"><%= Course.course['short'] %></a>
 
 		<div class="nav-collapse collapse">
 			<ul class="nav">
