enable video tag

--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -286,6 +286,13 @@ section pre .comment
 	color:#363;
 }
 
+video
+{
+	background-color:black;
+	height:480px;
+	width:100%;
+}
+
 /********** forms **********/
 
 section textarea
