--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
 	
+	<link href="http://vjs.zencdn.net/c/video-js.css" rel="stylesheet">
+	<script src="http://vjs.zencdn.net/c/video.js"></script>
+	
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
 			showProcessingMessages: false,
