--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -13,7 +13,7 @@
 <p>When you are ready to submit, please use the form below to select all required files, enter a note and press the Submit button. If you do not select all required files, you cannot submit.</p>
 <% end %>
 <p>Remember that you can view your grades on:
-<a href="results.mprog.nl">results.mprog.nl</a></p>
+<a href="http://results.mprog.nl/">results.mprog.nl</a></p>
 
 <% if @page.pset.message %>
 <p><strong><%= @page.pset.message %></strong></p>
