--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> <%= @user.name || @user.uvanetid %></a>
 			<ul class="dropdown-menu" style="min-width:200px;">
 				<% if is_admin? %>
-				<li><a href="#myModal" data-toggle="modal" data-backdrop="static"><i class="glyphicon glyphicon-refresh"></i> Update courseware...</a></li>
+				<li><a data-target="#myModal" data-toggle="modal"><i class="glyphicon glyphicon-refresh"></i> Update courseware...</a></li>
 				<li class="divider"></li>
 				<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> List users'.html_safe, :controller => 'admin', :action => 'users' %></li>
 				<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
@@ -42,15 +42,19 @@
 
 </div>
 
-<div id="myModal" class="modal hide fade">
-	<div class="modal-header">
-		<h3>Updating courseware</h3>
-	</div>
-	<div id="modal-body" class="modal-body">
-		Starting...
-	</div>
-	<div class="modal-footer">
-		<a href="/" class="btn btn-primary">Close</a>
+<div id="myModal" class="modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3>Updating courseware</h3>
+			</div>
+			<div id="modal-body" class="modal-body">
+				Starting...
+			</div>
+			<div class="modal-footer">
+				<a href="/" class="btn btn-primary">Close</a>
+			</div>
+		</div>
 	</div>
 </div>
 
