--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -56,11 +56,8 @@ body
 .tabbable .nav
 {
 	margin-bottom:0;
-}
-
-.tabbable .nav li:first-child
-{
-	smargin-left:0.75em;
+//	margin-left:-10px;
+//	margin-right:-10px;
 }
 
 /****************************************************************************
@@ -76,9 +73,7 @@ section
 	font-family:Georgia;
 	line-height:1.6;
 	font-size:16px;
-	
 	margin-top:1em;
-	border-top:1px solid #39F;
 }
 
 section:first-child:last-child
@@ -265,18 +260,18 @@ section pre .comment
 
 /********** forms **********/
 
-section textarea
-{
-	width:100%;
-	height:5em;
-	border:1px solid black;
-}
-
-section input[type=text]
-{
-	border:0;
-	border-bottom:1px solid black;
-}
+//section textarea
+//{
+//	width:100%;
+//	height:5em;
+//	border:1px solid black;
+//}
+//
+//section input[type=text]
+//{
+//	border:0;
+//	border-bottom:1px solid black;
+//}
 
 /********** tables **********/
 
@@ -345,6 +340,17 @@ footer small
 	{
 		border:none;
 		font-size:10pt;
+		display:block;
+	}
+	
+	.tab-content > .tab-pane, .pill-content > .pill-pane
+	{
+		display:block;
+	}
+	
+	.tab-content > #submit
+	{
+		display:none;
 	}
 
 	.row-fluid [class*="offset"]:first-child
