--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,7 +37,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> <%= @user.name || @user.uvanetid %></a>
 					<ul class="dropdown-menu" style="min-width:200px;">
 						<% if is_admin? %>
-						<li><a href="#myModal" data-toggle="modal" data-backdrop="static"><i class="icon-refresh"></i> Update courseware...</a></li>
+						<li><%= link_to '<i class="icon-refresh"></i> Update courseware...', '/admin/import_do', method: post %></li>
 						<li class="divider"></li>
 						<li><%= link_to '<i class="icon-tasks"></i> List users'.html_safe, :controller => 'admin', :action => 'users' %></li>
 						<li><%= link_to '<i class="icon-download-alt"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
@@ -55,25 +55,3 @@
 
 	</div>
 </div>
-
-<div id="myModal" class="modal hide fade">
-	<div class="modal-header">
-		<h3>Updating courseware</h3>
-	</div>
-	<div id="modal-body" class="modal-body">
-		Starting...
-	</div>
-	<div class="modal-footer">
-		<a href="/" class="btn btn-primary">Close</a>
-	</div>
-</div>
-
-<script>
-$('#myModal').on('shown', function () {
-	$.post('/admin/import_do', function(data)
-		{
-			$('#modal-body').html(data);
-		}
-	)
-})
-</script>
