--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,7 +37,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> <%= @user.name || @user.uvanetid %></a>
 					<ul class="dropdown-menu" style="min-width:200px;">
 						<% if is_admin? %>
-						<li><%= link_to '<i class="icon-refresh"></i> Update courseware...', '/admin/import_do', method: :post %></li>
+						<li><%= link_to '<i class="icon-refresh"></i> Update courseware...'.html_safe, '/admin/import_do', method: :post %></li>
 						<li class="divider"></li>
 						<li><%= link_to '<i class="icon-tasks"></i> List users'.html_safe, :controller => 'admin', :action => 'users' %></li>
 						<li><%= link_to '<i class="icon-download-alt"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
